Bug 1643126 - When measuring text, don't include letter-spacing on a preformatted newline character. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D78603