layout/generic/nsTextFrame.cpp
@@ -3405,11 +3405,13 @@ void nsTextFrame::PropertyProvider::GetSpacing(Range aRange,
       !(mTextRun->GetFlags2() & nsTextFrameUtils::Flags::HasTab));
 }
 
-static bool CanAddSpacingAfter(const gfxTextRun* aTextRun, uint32_t aOffset) {
+static bool CanAddSpacingAfter(const gfxTextRun* aTextRun, uint32_t aOffset,
+                               bool aNewlineIsSignificant) {
   if (aOffset + 1 >= aTextRun->GetLength()) return true;
   return aTextRun->IsClusterStart(aOffset + 1) &&
          aTextRun->IsLigatureGroupStart(aOffset + 1) &&
-         !aTextRun->CharIsFormattingControl(aOffset);
+         !aTextRun->CharIsFormattingControl(aOffset) &&
+         !(aNewlineIsSignificant && aTextRun->CharIsNewline(aOffset));
 }
 
 static gfxFloat ComputeTabWidthAppUnits(const nsIFrame* aFrame,
@@ -3458,11 +3460,13 @@ void nsTextFrame::PropertyProvider::GetSpacingInternal(Range aRange,
     // Iterate over non-skipped characters
     nsSkipCharsRunIterator run(
         start, nsSkipCharsRunIterator::LENGTH_UNSKIPPED_ONLY, aRange.Length());
+    bool newlineIsSignificant = mTextStyle->NewlineIsSignificant(mFrame);
     while (run.NextRun()) {
       uint32_t runOffsetInSubstring = run.GetSkippedOffset() - aRange.start;
       gfxSkipCharsIterator iter = run.GetPos();
       for (int32_t i = 0; i < run.GetRunLength(); ++i) {
-        if (CanAddSpacingAfter(mTextRun, run.GetSkippedOffset() + i)) {
+        if (CanAddSpacingAfter(mTextRun, run.GetSkippedOffset() + i,
+                               newlineIsSignificant)) {
           // End of a cluster, not in a ligature: put letter-spacing after it
           aSpacing[runOffsetInSubstring + i].mAfter += mLetterSpacing;
         }
